// Vitest Snapshot v1

exports[`[vite] subscribe module > dist files output [cold mode] 1`] = `
{
  "imports": {
    "element-plus/es": "dubhe:element-plus/es",
    "element-plus/es/components/button/style/css": "dubhe:element-plus/es/components/button/style/css",
    "vue": "dubhe:vue",
  },
}
`;

exports[`[vite] subscribe module > dist files output [hot mode] 1`] = `
{
  "imports": {
    "dubhe-esbuildpub": "http://127.0.0.1:8081/core",
    "dubhe-viteout": "http://127.0.0.1:8080/core",
    "vue": "dubhe:vue",
  },
}
`;
